fixed navbar clipping issue

--- a/css/index-sass.css
+++ b/css/index-sass.css
@@ -115,6 +115,11 @@ textarea {
   background-color: #90cc00;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   width: 100%;
   height: 60px;
