--- a/css/index.scss
+++ b/css/index.scss
@@ -101,6 +101,10 @@ textarea{
 .create-submit:hover {
     background-color: $color_primary_vl;
 }
+* {
+    margin: 0;
+    padding: 0;
+}
 nav {
     width: 100%;
     height: 60px;
